kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service    
spec:
  selector:
    app: user-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: metrics      
      protocol: TCP
      port: 8080         
      targetPort: 8080
